# OnTubeVis

./: .gitignore  CMakeLists.txt  MATERIAL.txt  OnTubeVis.pj  OnTubeVisHolo.pj  README.md  README.txt  ambient_occlusion_style.h  arclen_helper.cxx  arclen_helper.h  attrib_handle_manager.cxx  attrib_handle_manager.h  bcc_handler.cxx  bcc_handler.h  bezdat_handler.cxx  bezdat_handler.h  color_legend_manager.cxx  color_legend_manager.h  color_map_manager.cxx  color_map_manager.h  color_map_viewer.cxx  color_map_viewer.h  config.def  csv_handler.cxx  csv_handler.h  csv_handler_detail.h  curveutils.h  dbuf_queue.h  demo.h  gl_util.cxx  gl_util.h  glyph_attribute_mapping.cxx  glyph_attribute_mapping.h  glyph_compiler.h  glyph_layer_manager.cxx  glyph_layer_manager.h  glyph_shapes.h  gpumem.h  gpumem.inl  gui_util.h  (+61 more)
.github/workflows/: build.yml
3rd/fastgl/: fastgl.cpp
arclength/: PolynomialRegression.h  bezier.cpp  bezier.h  hermite.cpp  hermite.h  v3.h
arclength/fastgl/: fastgl.h
cuda/: optix_curves_impl.cuh  optix_interface.h  optix_isect_phantom.cuh  optix_tools.cuh
glsl/: clamp.glcs  clear.glcs  color_maps.glfs  color_maps.glpr  curve_tools.glsl  fxaa.glfs  fxaa.glpr  mipmap.glcs  optix_display.glfs  optix_display.glpr  screen.glfs  screen_quad.glfs  screen_quad.glpr  surface_mod.glsl  taa.glfs  taa.glpr  taa_resolve.glfs  textured_spline_ribbon.glfs  textured_spline_ribbon.glgs  textured_spline_ribbon.glpr  textured_spline_tube.glfs  textured_spline_tube.glgs  textured_spline_tube.glpr  textured_spline_tube_cd.glfs  textured_spline_tube_quad.glgs  textured_spline_tube_quad.glpr  textured_spline_tube_quad.glvs  textured_spline_tube_quad_cd.glgs  textured_spline_tube_quad_cd.glpr  textured_spline_tube_shading.glfs  textured_spline_tube_shading.glpr  view_aligned_ribbon.glfs  view_aligned_ribbon.glgs  view_aligned_ribbon.glpr  voxelize.glcs
gpumem/: alloc.h  alloc.inl  array.h  array.inl  common.h  memory_pool.cxx  memory_pool.h  memory_pool.inl  ring_buffer.h  ring_buffer.inl  span.h  span.inl
render/: common.h  state.cxx  state.h  trajectory.cxx  trajectory.h
res/: isosurfaces.xml  test.xml
res/color_maps/: RAINBOW.xml  rainbow.xml
res/color_maps/cyclic/: turboO.xml
res/color_maps_old/: turbo.xml
testdata/: 8_77_cartesian.csv  Paraview CSV Info.txt  benchmark_layerconf_4layers.xml  benchmark_layerconf_4layers_alternative.xml  demo_256trajs_256segs(65.5k).tgen  demo_3072trajs_1536segs(4.7mil).tgen  demo_3trajs_16segs(48).tgen  demo_straight.BezDat  demo_three.BezDat  demo_two.BezDat  giant_session_3_users.csv  giant_session_3_users_reduced.csv  interpolation_example.xml  layerconf_1layer_defaultprocedural.xml  layerconf_1layer_hotroom_equidist_dir.xml  layerconf_1layer_thm_example.xml  layerconf_2layers_colordemo.xml  layerconf_2layers_sepia_example.xml  layerconf_3layers_fisch_wehr.xml  layerconf_3layers_fisch_wehr_adj.xml  layerconf_3layers_fisch_wehr_adj2.xml  layerconf_4layers_1line_5star.xml  layerconf_4layers_1violin_5star.xml  layerconf_4layers_4lines_3star.xml  layerconf_4layers_4violins_3star.xml  layerconf_4layers_package_drone.xml  layerconf_4layers_uniform_example.xml  layerconf_cpecdrone.xml  layerconf_nox.xml  layerconf_nox_2.xml  layerconf_nox_co2.xml  layerconf_sepia.xml  layerconf_sepia_2.xml  package_drone_5_speeds.csv  rtlola_droneflight.csv  rtlola_droneflight.xml  sepia_20100914_123342.csv  sepia_20110126_212256.csv  sepia_20120221_190647.csv  sepia_20120404_052321.csv  (+6 more)
tool/cuda_resprep/: CMakeLists.txt  cuda_resprep.cxx  cuda_resprep.pj
